--- a/apps/dash-svm/assets/custom-styles.css
+++ b/apps/dash-svm/assets/custom-styles.css
@@ -1,409 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Playfair+Display');
-
-#body {
-    padding-bottom: 5rem;
-}
-
-@media (max-width: 700px) {
-    #body {
-        width: 100%;
-    }
-}
-
-/* Scalable Container
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,800');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700');
 
 .container.scalable {
     width: 95%;
     max-width: none;
-}
-
-@media (max-width: 1300px) {
-
-    .banner .container.scalable {
-        display: flex;
-        flex-direction: column-reverse;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    .banner h2 {
-        font-size: 4rem;
-    }
-
-    .banner Img {
-        height: 8rem;
-        margin-bottom: 5rem;
-    }
-}
-
-@media (max-width: 700px) {
-    .banner .container.scalable {
-        padding: 0
-    }
-
-    .banner Img {
-        height: 4rem;
-        margin-bottom: 2rem;
-    }
-
-    .banner h2 {
-        font-size: 3rem;
-    }
-}
-
-@media (max-width: 700px) {
-    #first-card {
-        margin: 0;
-        padding-right: 0;
-        padding-left: 0;
-    }
-}
-
-/* Banner
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-.banner {
-    background-color: #2f3445; /* Machine Learning Color is orange */
-    padding: 3rem 0;
-    width: 100%;
-    margin-bottom: 5rem;
-}
-
-.banner h2 {
-    color: #a5b1cd;
-    display: inline-block;
-    font-family: 'Playfair Display', sans-serif;
-    font-size: 4rem;
-    line-height: 1;
-    text-align: center;
-}
-
-.banner h2:hover {
-    color: #b4b5bf;
-    cursor: pointer;
-}
-
-.banner Img {
-    position: relative;
-    float: right;
-    height: 8rem;
-}
-
-/* app-container
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-@media (min-width: 951px) {
-    #app-container {
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        align-items: flex-start;
-    }
-}
-
-/* Dropdowns
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-.Select-control {
-    color: #a5b1cd;
-}
-
-.Select {
-    color: #a5b1cd;
-}
-
-.Select-menu-outer {
-    background-color: #2f3445;
-    border: 1px solid gray;
-}
-
-.Select div {
-    background-color: #2f3445;
-}
-
-.Select-menu-outer div:hover {
-    background-color: rgba(255, 255, 255, 0.01);
-}
-
-.Select-value-label {
-    color: #a5b1cd !important;
-}
-
-.Select--single > .Select-control .Select-value, .Select-placeholder {
-    border: 1px solid gray;
-    border-radius: 4px;
-}
-
-.card {
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-    width: 80%;
-    padding: 2rem 0;
-}
-
-#last-card {
-    border-bottom: none;
-}
-
-.graph-title {
-    font-size: 2rem;
-    margin: 15% 0 0 25%;
-}
-
-#button-zero-threshold {
-    background-color: #2f3445;
-    color: #a5b1cd;
-    border-color: gray;
-}
-
-#button-zero-threshold:hover {
-    border-color: white;
-}
-
-#button-card {
-    display: flex;
-    flex-direction: column;
-}
-
-#first-card {
-    padding-top: 0;
-}
-
-@media (max-width: 1500px) {
-    .rc-slider-mark-text {
-        font-size: 0.7vw;
-    }
-}
-
-@media (max-width: 950px) {
-    .rc-slider-mark-text {
-        font-size: 1.5vw;
-    }
-}
-
-@media (max-width: 650px) {
-    .rc-slider-mark-text {
-        font-size: 2vw;
-    }
-}
-
-
-@media (min-width: 1301px) {
-    #left-column {
-        flex: 1 20%;
-        margin: 0 3rem 0 0;
-        max-height: 83rem;
-        overflow-x: hidden;
-        overflow-y: auto;
-    }
-
-    .card {
-        padding-left: 2rem;
-    }
-}
-
-@media (max-width: 1300px) {
-    #left-column {
-        flex: 1 20%;
-        margin: 0 3rem 0 0;
-        max-height: 70rem;
-        overflow-x: hidden;
-        overflow-y: auto;
-    }
-
-    .card {
-        padding-left: 2rem;
-    }
-}
-
-@media (max-width: 1200px) {
-    #button-zero-threshold {
-        font-size: 0.8rem;
-        padding: 0
-    }
-}
-
-@media (max-width: 950px) {
-    #button-zero-threshold {
-        font-size: 1.0rem;
-        padding: 0
-    }
-}
-
-@media (max-width: 950px) {
-    #left-column {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin: 0;
-        max-height: none;
-        max-width: none;
-    }
-}
-
-/* Slider
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-
-.rc-slider-track {
-    background-color: #13c6e9;
-}
-
-.rc-slider-handle {
-    border: solid 2px #13c6e9;
-}
-
-/* Left column
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-#slider-svm-parameter-C-coef {
-    padding: 5px 10px 25px;
-}
-
-#slider-svm-parameter-gamma-coef {
-    padding: 5px 10px 25px
-}
-
-#shrinking-container {
-    padding: 20px 10px 25px 4px
-}
-
-/* Graph container
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-#svm-graph-container {
-    margin-top: 0.5rem;
-}
-
-@media (min-width: 951px) {
-    #div-graphs {
-        flex: 4 80%;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: stretch;
-    }
-
-    #svm-graph-container {
-        flex: 2 66%;
-    }
-
-    #graphs-container {
-        flex: 1 33%;
-        margin-top: 0.5rem;
-    }
-
-    #graph-sklearn-svm {
-        height: 100%;
-    }
-}
-
-@media (min-width: 1301px) {
-    #div-graphs {
-        height: 83rem;
-    }
-
-    #graph-line-roc-curve {
-        height: 40%
-    }
-
-    #graph-pie-confusion-matrix {
-        height: 60%
-    }
-}
-
-@media (max-width: 1300px) {
-    #div-graphs {
-        height: 70rem;
-    }
-
-    #graph-line-roc-curve {
-        height: 40%
-    }
-
-    #graph-pie-confusion-matrix {
-        height: 60%
-    }
-
-    .gtitle {
-        font-size: 1.25rem !important;
-    }
-
-    .xtitle, .ytitle {
-        font-size: 0.9rem !important;
-    }
-}
-
-@media (max-width: 950px) {
-    #div-graphs {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: flex-start;
-    }
-
-    #svm-graph-container {
-        width: 80vw;
-        height: 100vw;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding-bottom: 4rem;
-        border-bottom: solid 1px rgba(255, 255, 255, 0.1);
-    }
-
-    #graph-sklearn-svm {
-        width: 80vw;
-        height: 80vw;
-    }
-
-    #graphs-container {
-        display: flex;
-        flex-direction: column;
-        align-items: stretch;
-        justify-content: flex-start;
-        width: 90%;
-        max-width: 90%;
-        margin: 0 0 0 -1rem;
-        max-height: none;
-    }
-
-    #graph-line-roc-curve {
-        height: 45rem;
-        margin: 3rem 0 1rem 0;
-    }
-
-    #graph-pie-confusion-matrix {
-        height: 60rem;
-        margin-bottom: 5rem;
-    }
-}
-
-@media (max-width: 650px) {
-    #svm-graph-container {
-        padding-bottom: 3rem;
-    }
-
-    #graphs-container {
-        align-items: center;
-        width: 100%;
-        max-width: 100%;
-    }
-
-    #graph-line-roc-curve {
-        width: 90%;
-        height: 30rem;
-        margin: 3rem 0 1rem 0;
-    }
-
-    #graph-pie-confusion-matrix {
-        width: 90%;
-        height: 40rem;
-        margin-bottom: 5rem;
-    }
-}
-
-@media (max-width: 400px) {
-    #graphs-container {
-        align-items: center;
-        margin-left: -4rem
-    }
 }
 
 /* Remove Undo
@@ -412,6 +12,423 @@
     display: none;
 }
 
-#graph-line-roc-curve .modebar, #graph-pie-confusion-matrix .modebar {
+/* Top-row
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+#top-row {
+    background-color: #192444;
+    padding: 0 5rem;
+    display: flex;
+    align-items: stretch;
+}
+
+@media (min-width: 1400px) {
+    #top-row {
+        flex-direction: row;
+    }
+}
+
+@media only screen and (max-width: 1400px) {
+    #top-row {
+        flex-direction: column;
+        justify-content: flex-start;
+    }
+}
+
+/* Top-row-header
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+#top-row-header {
+    background-color: #1f2c56;
+    padding: 6rem 3rem 9rem 3rem;
+}
+
+.banner h6 {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 4rem;
+    font-weight: 800;
+    text-transform: uppercase;
+    line-height: normal;
+    color: white;
+}
+
+.banner Img {
+    height: 5rem;
+    margin-bottom: 5rem;
+}
+
+#well-map-container .graph-title, #ternary-map-container .graph-title, #header-container .graph-title {
+    font-family: 'Open Sans', sans-serif;
+    text-transform: uppercase;
+    font-weight: 800;
+    color: white;
+}
+
+#instructions {
+    font-size: 1.5rem;
+    font-style: italic;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+    color: white;
+    margin: 2rem 0 4rem 0;
+}
+
+@media (min-width: 1401px) {
+    #top-row-header {
+        flex-grow: 1;
+        padding: 6rem 3rem 9rem 3rem;
+    }
+
+    .banner h6 {
+        width: 35rem;
+    }
+
+    #instructions {
+        width: 30rem;
+    }
+
+    #operator-select {
+        width: 35rem;
+    }
+}
+
+@media only screen and (max-width: 1400px) {
+    #top-row-header {
+        flex-grow: 1;
+        padding: 6rem 3rem 5rem 3rem;
+    }
+}
+
+.Select-control, .Select-multi-value-wrapper, .Select-menu-outer div {
+    background-color: #1f2c56;
+}
+
+.Select-control, .Select, .Select-value-label, .Select-clear-zone {
+    color: white;
+}
+
+.Select-menu-outer {
+    background-color: #1f2c56;
+    border: 1px solid gray !important;
+}
+
+.Select-menu-outer div:hover {
+    background-color: rgba(255, 255, 255, 0.01);
+    cursor: pointer;
+}
+
+.Select--single > .Select-control .Select-value, .Select-placeholder {
+    border: 1px solid white;
+    border-radius: 4px;
+    color: white;
+    background-color: #1f2c56;
+}
+
+.Select--multi .Select-value-label, .Select--multi .Select-value {
+    color: #3c81e8;
+    background-color: #dfecff;
+}
+
+.Select-arrow {
+    border-color: white transparent transparent;
+}
+
+.Select-arrow-zone, .Select-clear-zone, .is-open > .Select-control {
+    background-color: #1f2c56 !important;
+}
+
+#selected-rows .Select-multi-value-wrapper, #selected-columns .Select-multi-value-wrapper {
+    max-height: 20rem;
+}
+
+#operator-select .Select-control {
+    padding: 1rem;
+}
+
+
+/* Top-row-graphs
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+#top-row-graphs {
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    flex-grow: 1;
+}
+
+#well-map-container {
+    margin: 0 -2rem 0 4rem;
+    flex-grow: 1;
+}
+
+#ternary-map-container {
+    flex-grow: 1;
+}
+
+#mapbox-view-selector, #ternary-layer-select {
+    margin-bottom: 1rem;
+}
+
+/* hides the svg dom element that has the click handler responsible for toggling */
+#well-map .legend .traces .legendtoggle {
     display: none;
+}
+
+#ternary-map .legend .traces .legendtoggle {
+    display: none;
+}
+
+#mapbox-view-selector label, #ternary-layer-select label {
+    color: white;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 300;
+    display: inline-block;
+}
+
+.graph-title {
+    font-size: 2rem;
+}
+
+@media only screen and (max-width: 1000px) {
+    #top-row-graphs {
+        flex-direction: column;
+    }
+
+    #well-map-container {
+        margin: 5rem 0 0 0;
+    }
+
+    #ternary-header {
+        margin: 5rem 0 0 0;
+    }
+
+    #ternary-map-container {
+        margin-bottom: 5rem;
+    }
+}
+
+@media (min-width: 1001px) {
+    #well-map-container {
+        margin: 0 -2rem 0 4rem;
+    }
+
+    #ternary-header {
+        margin: 0 0 0 5rem;
+    }
+}
+
+@media (min-width: 1001px) and (max-width: 1400px) {
+    #top-row-graphs {
+        padding: 5rem 0;
+        flex-direction: row;
+        align-items: stretch;
+    }
+}
+
+@media (min-width: 1401px) {
+    #top-row-graphs {
+        display: flex;
+        padding: 15rem 0 5rem 0;
+        flex-direction: row;
+        align-items: stretch;
+    }
+}
+
+@media (min-width: 1551px) {
+    #ternary-map * {
+        font-size: 1rem;
+    }
+
+    .legendtext.user-select-none {
+        font-size: 1.25rem !important;
+    }
+
+    .atitle, .btitle, .ctitle {
+        font-size: 1.25rem !important;
+    }
+
+    .ytick text, .xtick text {
+        font-size: 1.1rem !important;
+    }
+
+}
+
+@media (max-width: 1550px) {
+    #ternary-map * {
+        font-size: 0.85rem;
+    }
+
+    .legendtext.user-select-none {
+        font-size: 1.25rem !important;
+    }
+
+    .atitle, .btitle, .ctitle {
+        font-size: 1.25rem !important;
+    }
+
+    .ytick text, .xtick text {
+        font-size: 1.1rem !important;
+    }
+
+}
+
+@media (max-width: 1400px) {
+    #ternary-map * {
+        font-size: 0.9rem;
+    }
+
+    .legendtext.user-select-none {
+        font-size: 1.25rem !important;
+    }
+
+    .atitle, .btitle, .ctitle {
+        font-size: 1.25rem !important;
+    }
+
+    .ytick text, .xtick text {
+        font-size: 1.1rem !important;
+    }
+
+}
+
+@media (max-width: 1000px) {
+    #top-row {
+        padding: 0 4vw;
+    }
+
+    #ternary-map {
+        margin-left: -6.5rem;
+    }
+
+    #ternary-map * {
+        font-size: 1rem;
+    }
+
+    .legendtext.user-select-none {
+        font-size: 1.25rem !important;
+    }
+
+    .atitle, .btitle, .ctitle {
+        font-size: 1.25rem !important;
+    }
+
+    .ytick text, .xtick text {
+        font-size: 1.1rem !important;
+    }
+}
+
+@media (max-width: 750px) {
+    /*For some reason, at around 700px, a font-size is set to the ternary map text, so !important tag is needed to
+    override it*/
+    #ternary-map * {
+        font-size: 1.1rem !important;
+    }
+
+    .legendtext.user-select-none {
+        font-size: 1.25rem !important;
+    }
+
+    .atitle, .btitle, .ctitle {
+        font-size: 1.25rem !important;
+    }
+
+    .ytick text, .xtick text {
+        font-size: 1.1rem !important;
+    }
+}
+
+@media (max-width: 550px) {
+    .graph-title {
+        font-size: 1.5rem;
+    }
+
+    /*#mapbox-view-selector, #*/
+    #ternary-map-container {
+        margin-bottom: 0;
+    }
+
+    #ternary-header {
+        position: relative;
+        z-index: 3;
+    }
+
+    #ternary-map {
+        position: relative;
+        margin: -3rem 0 0 -6.5rem;
+        z-index: 1;
+    }
+
+    #ternary-map * {
+        font-size: 1.8vw !important;
+    }
+
+    .legendtext.user-select-none {
+        font-size: 1.1rem !important;
+    }
+
+    .atitle, .btitle, .ctitle {
+        font-size: 1.1rem !important;
+    }
+
+    .ytick text, .xtick text {
+        font-size: 0.9rem !important;
+    }
+}
+
+@media (max-width: 400px) {
+    #ternary-map * {
+        font-size: 1.5vw !important;
+    }
+
+    #top-row {
+        position: relative;
+        z-index: 0;
+    }
+
+    #bottom-row {
+        position: relative;
+        z-index: 1;
+        margin-top: -5rem;
+    }
+
+    #ternary-map {
+        margin: -7rem 0 0 -6.5rem;
+    }
+}
+
+@media (max-width: 350px) {
+    #bottom-row {
+        margin-top: -8rem;
+    }
+
+    #ternary-map {
+        margin: -9rem 0 0 -6.5rem;
+    }
+}
+
+/* Bottom row
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+#bottom-row {
+    padding: 5rem;
+    background-color: #f2f5fa;
+}
+
+#bottom-row .graph-title {
+    font-family: "Open Sans", sans-serif;
+    font-weight: 800;
+    margin-bottom: 3rem;
+}
+
+
+@media only screen and (max-width: 1000px) {
+    #bottom-row {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #form-bar-container, #well-production-container {
+        width: 100%;
+        margin: 0;
+    }
+
+    #form-bar-container {
+        margin-bottom: 5rem;
+    }
 }
