--- a/apps/dash-oil-gas-ternary/assets/oil-and-gas-ternary.css
+++ b/apps/dash-oil-gas-ternary/assets/oil-and-gas-ternary.css
@@ -71,12 +71,6 @@
     margin: 2rem 0 4rem 0;
 }
 
-@media only screen and (max-width: 1400px) {
-    #top-row-header {
-        flex-grow: 1;
-    }
-}
-
 @media (min-width: 1401px) {
     #top-row-header {
         flex-grow: 1;
@@ -93,6 +87,13 @@
 
     #operator-select {
         width: 35rem;
+    }
+}
+
+@media only screen and (max-width: 1400px) {
+    #top-row-header {
+        flex-grow: 1;
+        padding: 6rem 3rem 5rem 3rem;
     }
 }
 
@@ -138,7 +139,7 @@
     max-height: 20rem;
 }
 
-#operator-select .Select-control{
+#operator-select .Select-control {
     padding: 1rem;
 }
 
@@ -181,6 +182,10 @@
     display: inline-block;
 }
 
+.graph-title {
+    font-size: 2rem;
+}
+
 @media only screen and (max-width: 1000px) {
     #top-row-graphs {
         flex-direction: column;
@@ -194,7 +199,7 @@
         margin: 5rem 0 0 0;
     }
 
-    #ternary-map-container{
+    #ternary-map-container {
         margin-bottom: 5rem;
     }
 }
@@ -219,9 +224,182 @@
 
 @media (min-width: 1401px) {
     #top-row-graphs {
+        display: flex;
         padding: 15rem 0 5rem 0;
         flex-direction: row;
         align-items: stretch;
+    }
+}
+
+@media (min-width: 1551px) {
+    #ternary-map * {
+        font-size: 1rem;
+    }
+
+    .legendtext.user-select-none {
+        font-size: 1.25rem !important;
+    }
+
+    .atitle, .btitle, .ctitle {
+        font-size: 1.25rem !important;
+    }
+
+    .ytick text, .xtick text {
+        font-size: 1.1rem !important;
+    }
+
+}
+
+@media (max-width: 1550px) {
+    #ternary-map * {
+        font-size: 0.85rem;
+    }
+
+    .legendtext.user-select-none {
+        font-size: 1.25rem !important;
+    }
+
+    .atitle, .btitle, .ctitle {
+        font-size: 1.25rem !important;
+    }
+
+    .ytick text, .xtick text {
+        font-size: 1.1rem !important;
+    }
+
+}
+
+@media (max-width: 1400px) {
+    #ternary-map * {
+        font-size: 0.9rem;
+    }
+
+    .legendtext.user-select-none {
+        font-size: 1.25rem !important;
+    }
+
+    .atitle, .btitle, .ctitle {
+        font-size: 1.25rem !important;
+    }
+
+    .ytick text, .xtick text {
+        font-size: 1.1rem !important;
+    }
+
+}
+
+@media (max-width: 1000px) {
+    #top-row {
+        padding: 0 4vw;
+    }
+
+    #ternary-map {
+        margin-left: -6.5rem;
+    }
+
+    #ternary-map * {
+        font-size: 1rem;
+    }
+
+    .legendtext.user-select-none {
+        font-size: 1.25rem !important;
+    }
+
+    .atitle, .btitle, .ctitle {
+        font-size: 1.25rem !important;
+    }
+
+    .ytick text, .xtick text {
+        font-size: 1.1rem !important;
+    }
+}
+
+@media (max-width: 750px) {
+    /*For some reason, at around 700px, a font-size is set to the ternary map text, so !important tag is needed to
+    override it*/
+    #ternary-map * {
+        font-size: 1.1rem !important;
+    }
+
+    .legendtext.user-select-none {
+        font-size: 1.25rem !important;
+    }
+
+    .atitle, .btitle, .ctitle {
+        font-size: 1.25rem !important;
+    }
+
+    .ytick text, .xtick text {
+        font-size: 1.1rem !important;
+    }
+}
+
+@media (max-width: 550px) {
+    .graph-title {
+        font-size: 1.5rem;
+    }
+
+    /*#mapbox-view-selector, #*/
+    #ternary-map-container {
+        margin-bottom: 0;
+    }
+
+    #ternary-header {
+        position: relative;
+        z-index: 3;
+    }
+
+    #ternary-map {
+        position: relative;
+        margin: -3rem 0 0 -6.5rem;
+        z-index: 1;
+    }
+
+    #ternary-map * {
+        font-size: 1.8vw !important;
+    }
+
+    .legendtext.user-select-none {
+        font-size: 1.1rem !important;
+    }
+
+    .atitle, .btitle, .ctitle {
+        font-size: 1.1rem !important;
+    }
+
+    .ytick text, .xtick text {
+        font-size: 0.9rem !important;
+    }
+}
+
+@media (max-width: 400px) {
+    #ternary-map * {
+        font-size: 1.5vw !important;
+    }
+
+    #top-row {
+        position: relative;
+        z-index: 0;
+    }
+
+    #bottom-row {
+        position: relative;
+        z-index: 1;
+        margin-top: -5rem;
+    }
+
+    #ternary-map {
+        margin: -7rem 0 0 -6.5rem;
+    }
+}
+
+@media (max-width: 350px) {
+    #bottom-row {
+        margin-top: -8rem;
+    }
+
+    #ternary-map {
+        margin: -9rem 0 0 -6.5rem;
     }
 }
 
@@ -238,21 +416,19 @@
     margin-bottom: 3rem;
 }
 
-.graph-title {
-    font-size: 2rem;
-}
 
 @media only screen and (max-width: 1000px) {
-    #bottom-row{
+    #bottom-row {
         display: flex;
         flex-direction: column;
     }
-    #form-bar-container, #well-production-container{
+
+    #form-bar-container, #well-production-container {
         width: 100%;
         margin: 0;
     }
 
-    #form-bar-container{
+    #form-bar-container {
         margin-bottom: 5rem;
     }
 }
