add gif to README

--- a/apps/dash-daq-iv-tracer/assets/base.css
+++ b/apps/dash-daq-iv-tracer/assets/base.css
@@ -552,6 +552,9 @@ there.
     display: block !important;
     height: auto !important;
   }
+  #page-content {
+    display: block !important;
+  }
   #control-container {
     margin-left: 0 !important;
   }
