--- a/apps/dash-daq-iv-tracer/assets/iv-tracer-style.css
+++ b/apps/dash-daq-iv-tracer/assets/iv-tracer-style.css
@@ -22,6 +22,9 @@ body {
   > div.dash-debug-menu.dash-debug-menu--closed {
   display: none;
 }
+.gRFjMP {
+  margin-top: 0;
+}
 .flex-display {
   display: flex;
 }
@@ -89,9 +92,10 @@ body {
   /* border-radius: 10px;
   box-shadow: 0 6px 14px rgba(80, 103, 132, 0.2); */
   display: flex;
-  height: 100%;
+  /* height: 100%; */
   flex-direction: column;
   justify-content: center;
+  flex: 1;
 }
 
 #page-content > div {
@@ -107,11 +111,22 @@ body {
 #control-container {
   vertical-align: top;
   margin-left: 1%;
+  flex: 1;
 }
 
 #up-control-card,
-#mid-control-card,
+#mid-control-card {
+  width: 100%;
+  padding: 5% 0 !important;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  line-height: 1.6;
+}
 #bottom-card {
+  /* margin: 100px; */
   width: 100%;
   padding: 5% 0 !important;
   display: flex;
@@ -161,6 +176,7 @@ body {
 
 #sweep-dt > div > span > input[type="text"] {
   color: #95969a !important;
+  /* background-color: #161616; */
 }
 
 .daq-button > div > button {
