--- a/apps/dash-manufacture-spc-dashboard/assets/spc-custom-styles.css
+++ b/apps/dash-manufacture-spc-dashboard/assets/spc-custom-styles.css
@@ -1,10 +1,19 @@
 /* Table of contents
 ––––––––––––––––––––––––––––––––––––––––––––––––––
 - Banner
-- Scalable Container
-- Remove Undo
-/* Banner
+- Modal
+- Tabs
+- Main Dashboard Tab
+- Measurement Tab
+- Tables/Dropdown
+- Containers
+- Media Queries
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+* {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+}
 
 body {
   background-color: #1e2130;
@@ -122,7 +131,6 @@ body {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 #tabs {
-  margin: 0 0 3rem 0;
   width: 100%;
 }
 
@@ -131,7 +139,7 @@ body {
   text-transform: uppercase;
   font-weight: 600;
   font-size: 14px;
-  height: 18px;
+  height: fit-content;
   cursor: pointer;
 }
 
@@ -145,6 +153,7 @@ body {
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  height:18px;
 }
 
 #Specs-tab.custom-tab--selected, #Control-chart-tab.custom-tab--selected {
@@ -173,6 +182,11 @@ body {
 #metric_header > div {
   font-weight: bold;
   font-size: 1.4rem;
+  line-height: 3rem;
+}
+
+#m_header_5 {
+  margin-top: 0rem !important;
 }
 
 #Diameter_button,
@@ -256,13 +270,8 @@ body {
   margin-top: 2rem;
 }
 
-
 #stop-button > div > button:hover {
   color: #91dfd2 !important;
-}
-
-#card1 span {
-  font-size: 1.4rem;
 }
 
 /* Tab1 content
@@ -450,6 +459,7 @@ body {
 
 #status-container {
   width: 100%;
+  max-width:100%;
   height: 100%;
   display: flex;
   flex-direction: row;
@@ -463,13 +473,7 @@ body {
   flex-direction: column;
   flex: 3 1;
   max-width: calc(75% - 0.8rem);
-}
-
-/* Tab 1 Quick stats
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-#tab-trigger-btn {
-  display: inline-block;
-  float: right;
+  width: 70%;
 }
 
 
@@ -531,7 +535,7 @@ body {
   line-height:40px;
 }
 
-.sc-hMqMXs:hover {
+#stop-button > div > button:hover {
   color: #91dfd2 !important;
   border-color: white !important;
   background-color: #1d202d !important;
@@ -539,7 +543,7 @@ body {
 
 #card-1 P, #card-2 P {
   color: darkgray;
-  font-weight: normal;
+  font-weight: bold;
   align-self: flex-start;
 }
 
@@ -589,18 +593,23 @@ body {
   height: 30rem;
 }
 
-/*
-  ##Device = Most of the Smartphones Mobiles / ipad (Portrait)
-  */
-@media only screen and (max-width: 750px) {
-
-
-}
-
-
 /* Scalable Container
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .container.scalable {
   width: 95%;
   max-width: none;
+}
+
+/*
+  ##Device = Most of the Smartphones Mobiles / ipad (Portrait)
+  */
+@media only screen and (max-width: 700px) {
+  #banner-logo button {
+    display: none;
+  }
+
+
+
+
+
 }
