Shrink logo size

--- a/apps/dash-svm/assets/custom-styles.css
+++ b/apps/dash-svm/assets/custom-styles.css
@@ -86,7 +86,8 @@
 .banner Img {
     position: relative;
     float: right;
-    height: 8rem;
+    height: 5rem;
+    margin-top: 1.25rem
 }
 
 /* app-container
