--- a/apps/dash-stitching/assets/base.css
+++ b/apps/dash-stitching/assets/base.css
@@ -166,6 +166,11 @@ body {
   margin-top: 70px;
 }
 
+.instructions-sidebar {
+  margin-top: -20px;
+  margin-bottom: 20px
+}
+
 
 /* Typography
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
