--- a/apps/dash-svm/assets/custom-styles.css
+++ b/apps/dash-svm/assets/custom-styles.css
@@ -83,10 +83,11 @@
 }
 
 @media (max-width: 500px) {
-    .banner{
+    .banner {
         padding: 1rem 0;
         margin-bottom: 1rem;
     }
+
     .banner Img {
         height: 3rem;
         margin-bottom: 1rem;
@@ -187,7 +188,6 @@
 }
 
 
-
 @media (max-width: 650px) {
     .rc-slider-mark-text {
         font-size: 2vw;
@@ -256,6 +256,7 @@
         padding-left: 0;
     }
 }
+
 /* Slider
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
@@ -287,13 +288,38 @@
     margin-top: 0.5rem;
 }
 
+#svm-graph-container .graph-wrapper {
+    height: 100%;
+    width: 100%;
+}
+
 @media (min-width: 951px) {
+    #graphs-container {
+        display: flex;
+        flex-direction: column;
+        align-items: stretch;
+        justify-content: flex-start;
+    }
+
+    #graphs-container .graph-wrapper {
+        flex: 1 50%;
+    }
+
+    #graph-line-roc-curve, #graph-pie-confusion-matrix {
+        height: 100%;
+        width: 100%;
+    }
+
     #div-graphs {
         flex: 4 80%;
         display: flex;
         flex-direction: row;
         justify-content: center;
         align-items: stretch;
+    }
+
+    #graph-sklearn-svm {
+        height: 100%;
     }
 
     #svm-graph-container {
@@ -304,37 +330,17 @@
         flex: 1 33%;
         margin-top: 0.5rem;
     }
-
-    #graph-sklearn-svm {
-        height: 100%;
-    }
 }
 
 @media (min-width: 1301px) {
     #div-graphs {
         height: 83rem;
     }
-
-    #graph-line-roc-curve {
-        height: 40%
-    }
-
-    #graph-pie-confusion-matrix {
-        height: 60%
-    }
 }
 
 @media (max-width: 1300px) {
     #div-graphs {
         height: 70rem;
-    }
-
-    #graph-line-roc-curve {
-        height: 40%
-    }
-
-    #graph-pie-confusion-matrix {
-        height: 60%
     }
 
     .gtitle {
@@ -365,7 +371,7 @@
         border-bottom: solid 1px rgba(255, 255, 255, 0.1);
     }
 
-    #graph-sklearn-svm {
+    #svm-graph-container .graph-wrapper {
         width: 80vw;
         height: 80vw;
     }
@@ -381,22 +387,25 @@
         max-height: none;
     }
 
-    #graph-line-roc-curve {
-        height: 45rem;
-        margin: 3rem 0 1rem 0;
+    #graphs-container .graph-wrapper:nth-of-type(1) {
+        height: 40rem;
+        margin: 3rem 0 1rem -3rem;
+        width: 100%;
     }
 
-    #graph-pie-confusion-matrix {
+    #graphs-container .graph-wrapper:nth-of-type(2) {
         height: 60rem;
         margin-bottom: 5rem;
+        width: 100%;
+    }
+
+    #graph-sklearn-svm, #graph-line-roc-curve, #graph-pie-confusion-matrix {
+        height: 100%;
+        width: 100%;
     }
 }
 
 @media (max-width: 650px) {
-    #svm-graph-container {
-        padding-bottom: 3rem;
-    }
-
     #graphs-container {
         align-items: center;
         width: 100%;
@@ -404,22 +413,33 @@
     }
 
     #graph-line-roc-curve {
-        width: 90%;
-        height: 30rem;
+        width: 95%;
         margin: 3rem 0 1rem 0;
     }
 
     #graph-pie-confusion-matrix {
-        width: 90%;
-        height: 40rem;
+        width: 95%;
         margin-bottom: 5rem;
+    }
+
+    #graphs-container .graph-wrapper:nth-of-type(1) {
+        height: 35rem;
+    }
+
+    #graphs-container .graph-wrapper:nth-of-type(2) {
+        height: 45rem;
+        padding-left: 3rem;
     }
 }
 
 @media (max-width: 400px) {
-    #graphs-container {
-        align-items: center;
-        margin-left: -4rem
+    #graphs-container .graph-wrapper:nth-of-type(1) {
+        height: 25rem;
+    }
+
+    #graphs-container .graph-wrapper:nth-of-type(2) {
+        height: 40rem;
+        padding-left: 3rem;
     }
 }
 
