Add more headers to css

--- a/apps/dash-svm/assets/custom-styles.css
+++ b/apps/dash-svm/assets/custom-styles.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display');
 
+/* Body
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
 #body {
     padding-bottom: 5rem;
 }
