change color of step count

--- a/apps/dash-live-model-training/assets/custom_styles.css
+++ b/apps/dash-live-model-training/assets/custom_styles.css
@@ -10,7 +10,7 @@
 #div-total-step-count > h6 {
   font-weight: bold;
   font-size: 20px;
-  color: #6b6b6b;
+  color: #666464;
 }
 
 #div-total-step-count {
@@ -20,7 +20,7 @@
 #div-step-display > h6 {
   font-weight: bold;
   font-size: 20px;
-  color: #6b6b6b;
+  color: #666464;
 }
 
 .markdown img {
